plugins {
    // Provide convenience executables for trying out the examples.
    id 'application'
    // ASSUMES GRADLE 5.6 OR HIGHER. Use plugin version 0.8.10 with earlier gradle versions
    id 'com.google.protobuf' version '0.9.1'
    // Generate IntelliJ IDEA's .idea & .iml project files
    id 'idea'
    id 'java'
}

repositories {
    maven { // The google mirror is less flaky than mavenCentral()
        url "https://maven-central.storage-download.googleapis.com/maven2/"

        artifactUrls "https://repo1.maven.org/maven2/com/fasterxml/jackson/core/jackson-core/"
    }
    mavenCentral()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

def grpcVersion = '1.61.1'
def protobufVersion = '3.25.5'
def protocVersion = protobufVersion

dependencies {
    implementation files ('lib/tdch-1.5.12.jar')
    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
    implementation "io.grpc:grpc-stub:${grpcVersion}"
    compileOnly "org.apache.tomcat:annotations-api:6.0.53"

    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"

    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation "com.fasterxml.jackson.core:jackson-core:2.15.2"
    implementation "commons-cli:commons-cli:1.5.0"
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'com.github.luben:zstd-jni:1.5.5-11'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.2.3'
    implementation 'com.teradata.jdbc:terajdbc:20.00.00.46'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-core:1.5.13'
    implementation 'ch.qos.logback:logback-classic:1.5.13'
    implementation group: 'com.opencsv', name: 'opencsv', version: '3.7'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
    plugins {
        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
    }
    generateProtoTasks {
        all()*.plugins { grpc {} }
    }
}

// Inform IDEs like IntelliJ IDEA, Eclipse or NetBeans about the generated code.
sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}

application {
    mainClass = 'com.teradata.fivetran.destination.TeradataDestination'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes(
                'Main-Class' : 'com.teradata.fivetran.destination.TeradataDestination'
        )
    }

    from {
        configurations.runtimeClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()

    // Generate reports
    reports {
        junitXml.required.set(true)   // XML reports (for CI tools)
        html.required.set(true)       // Human-readable HTML reports
    }

    // Optional: make console output more verbose
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}
